First phase: customisation of the database and the admin interface.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@ digipal/backups/*.sql
 digipal/repo_cfg.py
 digipal_cust/static/
 digipal_cust/django_cache/
+
+digipal/migrations/0012_*.py
+digipal/migrations/0013_*.py
+digipal_project/static/
+digipal_project/django_cache/
+digipal_project/migrations/
+digipal_project/search/
+digipal_project/database/
+digipal_project/images/
+digipal_project/media/
+digipal_project/backups/*.sql
+supervisord.pid
