Added property id_viaf to Bonhum_StoryCharacter and to Person.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ digipal_cust/django_cache/
 digipal/migrations/0012_*.py
 digipal/migrations/0013_*.py
 digipal/migrations/0014_*.py
+digipal/migrations/0015_*.py
 digipal_text/migrations/0004_*.py
 digipal_project/static/
 digipal_project/django_cache/
